@@ -1,3 +1,6 @@
+2009-03-14 - Sean Huber (shuber@huberry.com)
+  * Fix evaluate_block issues and Enumerable methods
+
 2009-03-13 - Sean Huber (shuber@huberry.com)
   * Add Enumerable (incomplete)
   * Update doc/TODO
